pushpop-tab-view/pushpop-tab-view.css
.pp-tab-view > .pp-view-stack {
  bottom: 49px;
  display: none;
  -webkit-perspective: none;
     -moz-perspective: none;
      -ms-perspective: none;
       -o-perspective: none;
          perspective: none;
}

.pp-tab-view > .pp-view-stack.pp-active {
  display: block;
}

.pp-tab-bar {
  background: #000; /* Old browsers */
  background: -moz-linear-gradient(top,  #636363 0%, #202020 48%, #000 49%, #000 100%); /* FF3.6+ */
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#636363), color-stop(48%,#202020), color-stop(49%,#000), color-stop(100%,#000)); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  #636363 0%,#202020 48%,#000 49%,#000 100%); /* Chrome10+,Safari5.1+ */
  background: -o-linear-gradient(top,  #636363 0%,#202020 48%,#000 49%,#000 100%); /* Opera 11.10+ */
  background: -ms-linear-gradient(top,  #636363 0%,#202020 48%,#000 49%,#000 100%); /* IE10+ */
  background: linear-gradient(top,  #636363 0%,#202020 48%,#000 49%,#000 100%); /* W3C */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#636363', endColorstr='#000',GradientType=0 ); /* IE6-9 */
  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
  font-size: 1em;
  border-top: 1px solid rgba(255, 255, 255, 0.15);
  border-bottom: 1px solid #000;
  position: absolute;
  right: 0;
  bottom: 0;
  left: 0;
  padding: 2px;
  width: auto;
  height: 43px;
  z-index: 999999;
  -webkit-box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.3);
     -moz-box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.3);
          box-shadow: inset 0 1px 0 0 rgba(255, 255, 255, 0.3);
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
       -o-user-select: none;
          user-select: none;
  -webkit-backface-visibility: hidden;
     -moz-backface-visibility: hidden;
      -ms-backface-visibility: hidden;
       -o-backface-visibility: hidden;
          backface-visibility: hidden;
  -webkit-transform: translate3d(0, 0, 0);
     -moz-transform:   translate(0, 0);
      -ms-transform:   translate(0, 0);
       -o-transform:   translate(0, 0);
          transform:   translate(0, 0);
}

.pp-tab-bar-button {
  cursor: pointer;
  display: inline-block;
  height: 44px;
  text-align: center;
  text-decoration: none;
  -webkit-border-radius: 3px;
     -moz-border-radius: 3px;
          border-radius: 3px;
}

.pp-tab-bar-button:hover {
  text-decoration: none;
}

.pp-tab-bar-button:first-child:nth-last-child(1) {
  width: 100%;
}

.pp-tab-bar-button:first-child:nth-last-child(2),
.pp-tab-bar-button:first-child:nth-last-child(2) ~ .pp-tab-bar-button {
  width: 50%;
}

.pp-tab-bar-button:first-child:nth-last-child(3),
.pp-tab-bar-button:first-child:nth-last-child(3) ~ .pp-tab-bar-button {
  width: 33.33333%;
}

.pp-tab-bar-button:first-child:nth-last-child(4),
.pp-tab-bar-button:first-child:nth-last-child(4) ~ .pp-tab-bar-button {
  width: 25%;
}

.pp-tab-bar-button:first-child:nth-last-child(5),
.pp-tab-bar-button:first-child:nth-last-child(5) ~ .pp-tab-bar-button {
  width: 20%;
}

.pp-tab-bar-button.pp-active {
  background: rgba(255, 255, 255, 0.15);
}

.pp-tab-bar-button-icon {
  color: #888;
  font-size: 26px;
  display: block !important;
}

.pp-tab-bar-button-icon::before {
  background: none;
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(161,161,161,1)), color-stop(100%,rgba(95,95,95,1))); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  rgba(161,161,161,1) 0%,rgba(95,95,95,1) 100%); /* Chrome10+,Safari5.1+ */
  color: #808080;
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
}

.pp-active > .pp-tab-bar-button-icon::before {
  background: none;
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(209,225,248,1)), color-stop(50%,rgba(126,183,236,1)), color-stop(51%,rgba(39,138,242,1)), color-stop(100%,rgba(59,191,248,1))); /* Chrome,Safari4+ */
  background: -webkit-linear-gradient(top,  rgba(209,225,248,1) 0%,rgba(126,183,236,1) 50%,rgba(39,138,242,1) 51%,rgba(59,191,248,1) 100%); /* Chrome10+,Safari5.1+ */
  color: #3bbff8;
  -webkit-text-fill-color: transparent;
  -webkit-background-clip: text;
}

.pp-tab-bar-button-title {
  color: #999;
  font-size: 10px;
  font-weight: bold;
}

.pp-active > .pp-tab-bar-button-title {
  color: #fff;
}

